src/snapshots/jj_lsp__conflict__tests__diff_four_sides.snap
---
source: src/conflict.rs
assertion_line: 199
expression: conflicts
---
[
    Conflict {
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 41,
                character: 28,
            },
        },
        title_range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 23,
            },
        },
        blocks: [
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 6,
                        character: 0,
                    },
                    end: Position {
                        line: 6,
                        character: 39,
                    },
                },
                content: "foo\n1 pez\n2 pez\n3 pez\n4 pez\nbar\nbaz",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 18,
                        character: 0,
                    },
                    end: Position {
                        line: 18,
                        character: 39,
                    },
                },
                content: "1 poisson\n2 poisson\n3 poisson\n4 poisson",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 27,
                        character: 0,
                    },
                    end: Position {
                        line: 27,
                        character: 27,
                    },
                },
                content: "1 pescare\n2 pescare\n3 pescare\n4 pescare",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 32,
                        character: 0,
                    },
                    end: Position {
                        line: 32,
                        character: 39,
                    },
                },
                content: "1 fisch\n2 fisch\n3 fisch\n4 fisch",
            },
        ],
    },
    Conflict {
        range: Range {
            start: Position {
                line: 43,
                character: 0,
            },
            end: Position {
                line: 76,
                character: 28,
            },
        },
        title_range: Range {
            start: Position {
                line: 43,
                character: 0,
            },
            end: Position {
                line: 43,
                character: 23,
            },
        },
        blocks: [
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 44,
                        character: 0,
                    },
                    end: Position {
                        line: 44,
                        character: 39,
                    },
                },
                content: "5 pez\n6 pez\n7 pez\n8 pez",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 53,
                        character: 0,
                    },
                    end: Position {
                        line: 53,
                        character: 39,
                    },
                },
                content: "5 poisson\n6 poisson\n7 poisson\n8 poisson",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 62,
                        character: 0,
                    },
                    end: Position {
                        line: 62,
                        character: 27,
                    },
                },
                content: "5 pescare\n6 pescare\n7 pescare\n8 pescare",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 67,
                        character: 0,
                    },
                    end: Position {
                        line: 67,
                        character: 39,
                    },
                },
                content: "5 fisch\n6 fisch\n7 fisch\n8 fisch",
            },
        ],
    },
]
