src/snapshots/jj_lsp__conflict__tests__diff_two_sides.snap
---
source: src/conflict.rs
assertion_line: 172
expression: conflicts
---
[
    Conflict {
        range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 20,
                character: 28,
            },
        },
        title_range: Range {
            start: Position {
                line: 5,
                character: 0,
            },
            end: Position {
                line: 5,
                character: 23,
            },
        },
        blocks: [
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 6,
                        character: 0,
                    },
                    end: Position {
                        line: 6,
                        character: 36,
                    },
                },
                content: "1 pez\n2 pez\n3 pez\n4 pez",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 15,
                        character: 0,
                    },
                    end: Position {
                        line: 15,
                        character: 27,
                    },
                },
                content: "1 poisson\n2 poisson\n3 poisson\n4 poisson",
            },
        ],
    },
    Conflict {
        range: Range {
            start: Position {
                line: 22,
                character: 0,
            },
            end: Position {
                line: 37,
                character: 28,
            },
        },
        title_range: Range {
            start: Position {
                line: 22,
                character: 0,
            },
            end: Position {
                line: 22,
                character: 23,
            },
        },
        blocks: [
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 23,
                        character: 0,
                    },
                    end: Position {
                        line: 23,
                        character: 36,
                    },
                },
                content: "5 pez\n6 pez\n7 pez\n8 pez",
            },
            ChangeBlock {
                title_range: Range {
                    start: Position {
                        line: 32,
                        character: 0,
                    },
                    end: Position {
                        line: 32,
                        character: 27,
                    },
                },
                content: "5 poisson\n6 poisson\n7 poisson\n8 poisson",
            },
        ],
    },
]
